not gonna test this but i hope it works

--- a/is-eurail-cheaper/app/img/image_exploration.html
+++ b/is-eurail-cheaper/app/img/image_exploration.html
@@ -14,25 +14,27 @@
         position: absolute;
     }
 
-    .image-top {
-        /*transform: rotate3d(1, 0, 0, 45deg);*/
-        /*z-index:-1*/
+    .image-1-of-1 {
+
+    }
+
+    .image-1-of-2 {
         clip-path: polygon(0% 0%, 98% 0%, 0% 98%);
     }
 
-    .image-bottom {
+    .image-2-of-2 {
         clip-path: polygon(100% 2%, 100% 100%, 2% 100%);
     }
 
-    .image-1 {
+    .image-1-of-3 {
         clip-path: polygon(0% 0%, 50% 0%, 0% 100%);
     }
 
-    .image-2 {
+    .image-2-of-3 {
         clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
     }
 
-    .image-3 {
+    .image-3-of-3 {
         clip-path: polygon(50% 0%, 100% 0%, 100% 100%);
     }
 
